[package]
name = "rust-nlp100"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.3.14"


[[bin]]
name = "1_0"
path = "src/1_0/main.rs"

[[bin]]
name = "1_1"
path = "src/1_1/main.rs"

[[bin]]
name = "1_2"
path = "src/1_2/main.rs"

[[bin]]
name = "1_3"
path = "src/1_3/main.rs"

[[bin]]
name = "1_4"
path = "src/1_4/main.rs"

[[bin]]
name = "1_5"
path = "src/1_5/main.rs"

[[bin]]
name = "1_6"
path = "src/1_6/main.rs"

[[bin]]
name = "1_7"
path = "src/1_7/main.rs"

[[bin]]
name = "1_8"
path = "src/1_8/main.rs"

[[bin]]
name = "1_9"
path = "src/1_9/main.rs"

[[bin]]
name = "2_10"
path = "src/2_10/main.rs"

[[bin]]
name = "2_11"
path = "src/2_11/main.rs"

[[bin]]
name = "2_12"
path = "src/2_12/main.rs"

[[bin]]
name = "2_13"
path = "src/2_13/main.rs"

[[bin]]
name = "2_14"
path = "src/2_14/main.rs"

[[bin]]
name = "2_15"
path = "src/2_15/main.rs"
